# CPGLib

./: .gitignore  CMakeLists.txt  CPG.cpp  CPG.h  MatsuokaEngine.cpp  MatsuokaEngine.h  QuantiseGrid_hard.cpp  QuantiseGrid_hard.h  QuantiseGrid_soft.cpp  QuantiseGrid_soft.h  QuantisedEventQueue.cpp  QuantisedEventQueue.h  ReadMe.md  ScalingCurve.cpp  core.h  mainpage.dox  matsuNode.cpp  matsu_signal_calcs.h
doxygen/: default.doxyfile
doxygen/html/: CMakeLists_8txt.html  CPG_8cpp.html  CPG_8h.html  CPG_8h_source.html  Matsu__calcs_8cpp.html  Matsu__calcs_8h.html  Matsu__calcs_8h_source.html  MatsuokaEngine_8cpp.html  MatsuokaEngine_8h.html  MatsuokaEngine_8h_source.html  QuantiseGrid__hard_8cpp.html  QuantiseGrid__hard_8h.html  QuantiseGrid__hard_8h_source.html  QuantiseGrid__soft_8cpp.html  QuantiseGrid__soft_8h.html  QuantiseGrid__soft_8h_source.html  QuantisedEventQueue_8cpp.html  QuantisedEventQueue_8h.html  QuantisedEventQueue_8h_source.html  ReadMe_8md.html  ReadMe_8txt.html  ScalingCurve_8cpp.html  ScalingCurve_8h.html  ScalingCurve_8h_source.html  Thumbs.db  XORRand_8cpp.html  XORRand_8h.html  XORRand_8h_source.html  annotated.html  classCPG-members.html  classCPG.html  classDelayLine-members.html  classDelayLine.html  classMatsuCalcs-members.html  classMatsuCalcs.html  classMatsuNode-members.html  classMatsuNode.html  classMatsuokaEngine-members.html  classMatsuokaEngine.html  classQuantiseGrid__hard-members.html  (+89 more)
doxygen/latex/: CMakeLists_8txt.tex  CPG_8cpp.tex  CPG_8h.tex  Matsu__calcs_8cpp.tex  Matsu__calcs_8h.tex  MatsuokaEngine_8cpp.tex  MatsuokaEngine_8h.tex  QuantiseGrid__hard_8cpp.tex  QuantiseGrid__hard_8h.tex  QuantiseGrid__soft_8cpp.tex  QuantiseGrid__soft_8h.tex  QuantisedEventQueue_8cpp.tex  QuantisedEventQueue_8h.tex  ReadMe_8md.tex  ReadMe_8txt.tex  ScalingCurve_8cpp.tex  ScalingCurve_8h.tex  XORRand_8cpp.tex  XORRand_8h.tex  annotated.tex  classCPG.tex  classDelayLine.tex  classMatsuCalcs.tex  classMatsuNode.tex  classMatsuokaEngine.tex  classQuantiseGrid__hard.tex  classQuantiseGrid__soft.tex  classQuantisedEventQueue.tex  classScalingCurve.tex  classXORRand.tex  classcore.tex  core_8cpp.tex  core_8h.tex  delayLine_8h.tex  files.tex  index.tex  mainpage_8dox.tex  matsuNode_8cpp.tex  matsuNode_8h.tex  matsu__signal__calcs_8c.tex  (+8 more)
pybindings/: CMakeLists.txt  ReadMe.md  cpglib.cpp  test.py
(+111 files in other folders)
